<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        tools:ignore="UselessParent">


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:id="@+id/linearLayoutCompat"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/dimen_100dp"
                android:layout_height="@dimen/dimen_100dp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_launcher_round"
                android:id="@+id/imageView"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/error"
                android:visibility="invisible"
                android:layout_gravity="center"
                android:textColor="@color/colorWhite"
                android:background="@color/colorBlack"
                android:text="@string/text_error_image_is_mandaroty"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimen_15sp"
                android:textColor="@color/colorBlack"
                android:layout_marginTop="@dimen/dimen_15dp"
                tools:ignore="SpUsage"
                android:text="@string/text_first_name" />


            <EditText
                android:id="@+id/editText_first_name"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:inputType="text"
                android:hint="@string/text_first_name"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:layout_height="wrap_content" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimen_15sp"
                android:textColor="@color/colorBlack"
                android:layout_marginTop="@dimen/dimen_15dp"
                android:text="@string/text_last_name" />



            <EditText
                android:id="@+id/editText_last_name"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:layout_height="match_parent"
                android:inputType="text"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:hint="@string/text_last_name"
                android:textSize="@dimen/dimen_20sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimen_15sp"
                android:textColor="@color/colorBlack"
                android:layout_marginTop="@dimen/dimen_15dp"
                android:text="@string/text_email_id" />


            <EditText

                android:id="@+id/editText_email"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:layout_height="wrap_content"
                android:hint="@string/text_email_id"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimen_15sp"
                android:textColor="@color/colorBlack"
                android:layout_marginTop="@dimen/dimen_15dp"
                android:text="@string/text_mobile_number" />


            <EditText

                android:id="@+id/editText_mobile_number"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:hint="@string/text_mobile_number"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimen_15sp"
                android:textColor="@color/colorBlack"
                android:layout_marginTop="@dimen/dimen_15dp"
                android:text="@string/text_date_of_birth" />


            <EditText
                android:id="@+id/editText_dob"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:hint="@string/text_date_of_birth"/>


            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="24dp"
                android:orientation="horizontal">


                <RadioButton
                    android:id="@+id/radioButton_male"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="Male"/>


                <RadioButton
                    android:id="@+id/radioButton_female"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="Female"/>

            </RadioGroup>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimen_15sp"
                android:textColor="@color/colorBlack"
                android:layout_marginTop="@dimen/dimen_15dp"
                android:text="@string/text_password" />


            <EditText
                android:id="@+id/editText_password"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:layout_height="wrap_content"
                android:hint="@string/text_password"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:inputType="textPassword" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/dimen_15sp"
                android:textColor="@color/colorBlack"
                android:layout_marginTop="@dimen/dimen_15dp"
                android:text="@string/text_confirm_password" />

            <EditText
                android:id="@+id/editText_confirm_password"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:layout_height="wrap_content"
                android:hint="@string/text_confirm_password"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/button_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:layout_marginBottom="@dimen/dimen_10dp"
                android:text="@string/text_register"/>


            <TextView
                android:id="@+id/textView_already_member"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="visible"
                android:textColor="@color/colorBlack"
                android:layout_marginBottom="@dimen/dimen_40dp"
                android:text="@string/text_already_a_member" />
        </LinearLayout>

    </ScrollView>
</RelativeLayout>